// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Structure/ino-table-header-cell Label smoke-test 1`] = `
<div id="root-inner">
  <div class="story-ino-table-header-cell">
    <ino-table class="hydrated">
      <div class="mdc-data-table ino-table--no-header">
        <div class="mdc-data-table__table-container">
          <table class="ino-table__table mdc-data-table__table">
            <tbody class="mdc-data-table__content">
              <ino-table-header-cell autofocus="false"
                                     not-sortable="false"
                                     sort-direction
                                     search-icon="search"
                                     searched="false"
                                     label="Search for XY..."
                                     role="columnheader"
                                     class="mdc-data-table__header-cell ino-table-header-cell--searchable ino-table-header-cell--sortable hydrated"
                                     data-column-id="_70pvp2ne8"
                                     tabindex="-1"
                                     id="ino-table-header-cell-id__45fxikxxb"
                                     style="max-width: 230px;"
              >
                <ino-popover color-scheme="transparent"
                             class="hydrated"
                >
                  <div class="mdc-data-table__header-cell-wrapper"
                       slot="popover-trigger"
                       tabindex="0"
                       aria-expanded="false"
                  >
                    <ino-icon class="ino-table-header-cell__search-icon ino-icon--color-scheme-primary hydrated">
                    </ino-icon>
                    <div class="mdc-data-table__header-cell-label">
                      Search for XY...
                    </div>
                  </div>
                  <div>
                  </div>
                </ino-popover>
                <ino-icon-button class="sort-none ino-icon-button--color-scheme-dark hydrated">
                  <button class="mdc-icon-button mdc-ripple-upgraded--unbounded mdc-ripple-upgraded"
                          type="button"
                          style="--mdc-ripple-fg-size:14px; --mdc-ripple-fg-scale:1.71429; --mdc-ripple-left:5px; --mdc-ripple-top:5px;"
                  >
                    <div class="mdc-icon-button__ripple">
                    </div>
                    <span class="mdc-icon-button__icon">
                      <ino-icon class="ino-icon--color-scheme-primary hydrated">
                      </ino-icon>
                    </span>
                  </button>
                </ino-icon-button>
              </ino-table-header-cell>
            </tbody>
          </table>
        </div>
        <div class="mdc-data-table__progress-indicator">
          <div class="mdc-data-table__scrim">
          </div>
        </div>
      </div>
    </ino-table>
  </div>
</div>
`;

exports[`Structure/ino-table-header-cell NotSortable smoke-test 1`] = `
<div id="root-inner">
  <div class="story-ino-table-header-cell">
    <ino-table class="hydrated">
      <div class="mdc-data-table ino-table--no-header">
        <div class="mdc-data-table__table-container">
          <table class="ino-table__table mdc-data-table__table">
            <tbody class="mdc-data-table__content">
              <ino-table-header-cell autofocus="false"
                                     not-sortable="true"
                                     sort-direction
                                     search-icon="search"
                                     searched="false"
                                     label="Label"
                                     role="columnheader"
                                     class="mdc-data-table__header-cell ino-table-header-cell--searchable hydrated"
                                     data-column-id="_ljm9iawco"
                                     tabindex="-1"
                                     id="ino-table-header-cell-id__n7xtda7pr"
                                     style="max-width: 230px;"
              >
                <ino-popover color-scheme="transparent"
                             class="hydrated"
                >
                  <div class="mdc-data-table__header-cell-wrapper"
                       slot="popover-trigger"
                       tabindex="0"
                       aria-expanded="false"
                  >
                    <ino-icon class="ino-table-header-cell__search-icon ino-icon--color-scheme-primary hydrated">
                    </ino-icon>
                    <div class="mdc-data-table__header-cell-label">
                      Label
                    </div>
                  </div>
                  <div>
                  </div>
                </ino-popover>
              </ino-table-header-cell>
            </tbody>
          </table>
        </div>
        <div class="mdc-data-table__progress-indicator">
          <div class="mdc-data-table__scrim">
          </div>
        </div>
      </div>
    </ino-table>
  </div>
</div>
`;

exports[`Structure/ino-table-header-cell Playground smoke-test 1`] = `
<div id="root-inner">
  <div class="story-ino-table-header-cell">
    <ino-table class="hydrated">
      <div class="mdc-data-table ino-table--no-header">
        <div class="mdc-data-table__table-container">
          <table class="ino-table__table mdc-data-table__table">
            <tbody class="mdc-data-table__content">
              <ino-table-header-cell autofocus="false"
                                     not-sortable="false"
                                     sort-direction
                                     search-icon="search"
                                     searched="false"
                                     label="Label"
                                     role="columnheader"
                                     class="mdc-data-table__header-cell ino-table-header-cell--searchable ino-table-header-cell--sortable hydrated"
                                     data-column-id="_de5mdkmmj"
                                     tabindex="-1"
                                     id="ino-table-header-cell-id__3km4a4cbk"
                                     style="max-width: 230px;"
              >
                <ino-popover color-scheme="transparent"
                             class="hydrated"
                >
                  <div class="mdc-data-table__header-cell-wrapper"
                       slot="popover-trigger"
                       tabindex="0"
                       aria-expanded="false"
                  >
                    <ino-icon class="ino-table-header-cell__search-icon hydrated ino-icon--color-scheme-primary">
                    </ino-icon>
                    <div class="mdc-data-table__header-cell-label">
                      Label
                    </div>
                  </div>
                  <div>
                  </div>
                </ino-popover>
                <ino-icon-button class="sort-none ino-icon-button--color-scheme-dark hydrated">
                  <button class="mdc-icon-button mdc-ripple-upgraded--unbounded mdc-ripple-upgraded"
                          type="button"
                          style="--mdc-ripple-fg-size:14px; --mdc-ripple-fg-scale:1.71429; --mdc-ripple-left:5px; --mdc-ripple-top:5px;"
                  >
                    <div class="mdc-icon-button__ripple">
                    </div>
                    <span class="mdc-icon-button__icon">
                      <ino-icon class="hydrated ino-icon--color-scheme-primary">
                      </ino-icon>
                    </span>
                  </button>
                </ino-icon-button>
              </ino-table-header-cell>
            </tbody>
          </table>
        </div>
        <div class="mdc-data-table__progress-indicator">
          <div class="mdc-data-table__scrim">
          </div>
        </div>
      </div>
    </ino-table>
  </div>
</div>
`;

exports[`Structure/ino-table-header-cell SearchIcon smoke-test 1`] = `
<div id="root-inner">
  <div class="story-ino-table-header-cell">
    <ino-table class="hydrated">
      <div class="mdc-data-table ino-table--no-header">
        <div class="mdc-data-table__table-container">
          <table class="ino-table__table mdc-data-table__table">
            <tbody class="mdc-data-table__content">
              <ino-table-header-cell autofocus="false"
                                     not-sortable="false"
                                     sort-direction
                                     search-icon="search"
                                     searched="false"
                                     label="Label"
                                     role="columnheader"
                                     class="mdc-data-table__header-cell ino-table-header-cell--searchable ino-table-header-cell--sortable hydrated"
                                     data-column-id="_d4xwnpm77"
                                     tabindex="-1"
                                     id="ino-table-header-cell-id__hwtllvj4l"
                                     style="max-width: 230px;"
              >
                <ino-popover color-scheme="transparent"
                             class="hydrated"
                >
                  <div class="mdc-data-table__header-cell-wrapper"
                       slot="popover-trigger"
                       tabindex="0"
                       aria-expanded="false"
                  >
                    <ino-icon class="ino-table-header-cell__search-icon ino-icon--color-scheme-primary hydrated">
                    </ino-icon>
                    <div class="mdc-data-table__header-cell-label">
                      Label
                    </div>
                  </div>
                  <div>
                  </div>
                </ino-popover>
                <ino-icon-button class="sort-none ino-icon-button--color-scheme-dark hydrated">
                  <button class="mdc-icon-button mdc-ripple-upgraded--unbounded mdc-ripple-upgraded"
                          type="button"
                          style="--mdc-ripple-fg-size:14px; --mdc-ripple-fg-scale:1.71429; --mdc-ripple-left:5px; --mdc-ripple-top:5px;"
                  >
                    <div class="mdc-icon-button__ripple">
                    </div>
                    <span class="mdc-icon-button__icon">
                      <ino-icon class="ino-icon--color-scheme-primary hydrated">
                      </ino-icon>
                    </span>
                  </button>
                </ino-icon-button>
              </ino-table-header-cell>
            </tbody>
          </table>
        </div>
        <div class="mdc-data-table__progress-indicator">
          <div class="mdc-data-table__scrim">
          </div>
        </div>
      </div>
    </ino-table>
  </div>
</div>
`;

exports[`Structure/ino-table-header-cell SearchWithDatepicker smoke-test 1`] = `
<div id="root-inner">
  <div class="story-ino-table-header-cell">
    <ino-table class="hydrated">
      <div class="mdc-data-table ino-table--no-header">
        <div class="mdc-data-table__table-container">
          <table class="ino-table__table mdc-data-table__table">
            <tbody class="mdc-data-table__content">
              <ino-table-header-cell label="Column Selection Search"
                                     search-icon="calendar"
                                     class="datepicker-cell mdc-data-table__header-cell ino-table-header-cell--searchable ino-table-header-cell--sortable hydrated"
                                     role="columnheader"
                                     data-column-id="_cevbyemt6"
                                     tabindex="-1"
                                     id="ino-table-header-cell-id__n209th53j"
                                     style="max-width: 230px;"
              >
                <ino-popover color-scheme="transparent"
                             class="hydrated"
                >
                  <div class="mdc-data-table__header-cell-wrapper"
                       slot="popover-trigger"
                       tabindex="0"
                       aria-expanded="false"
                  >
                    <ino-icon class="ino-table-header-cell__search-icon hydrated ino-icon--color-scheme-primary">
                    </ino-icon>
                    <div class="mdc-data-table__header-cell-label">
                      Column Selection Search
                    </div>
                  </div>
                  <div>
                  </div>
                </ino-popover>
                <ino-icon-button class="sort-none ino-icon-button--color-scheme-dark hydrated">
                  <button class="mdc-icon-button mdc-ripple-upgraded--unbounded mdc-ripple-upgraded"
                          type="button"
                          style="--mdc-ripple-fg-size:14px; --mdc-ripple-fg-scale:1.71429; --mdc-ripple-left:5px; --mdc-ripple-top:5px;"
                  >
                    <div class="mdc-icon-button__ripple">
                    </div>
                    <span class="mdc-icon-button__icon">
                      <ino-icon class="ino-icon--color-scheme-primary hydrated">
                      </ino-icon>
                    </span>
                  </button>
                </ino-icon-button>
              </ino-table-header-cell>
            </tbody>
          </table>
        </div>
        <div class="mdc-data-table__progress-indicator">
          <div class="mdc-data-table__scrim">
          </div>
        </div>
      </div>
    </ino-table>
  </div>
</div>
`;

exports[`Structure/ino-table-header-cell SearchWithSelection smoke-test 1`] = `
<div id="root-inner">
  <div class="story-ino-table-header-cell">
    <ino-table class="hydrated">
      <div class="mdc-data-table ino-table--no-header">
        <div class="mdc-data-table__table-container">
          <table class="ino-table__table mdc-data-table__table">
            <tbody class="mdc-data-table__content">
              <ino-table-header-cell label="Column Selection Search"
                                     search-icon="filter"
                                     role="columnheader"
                                     class="mdc-data-table__header-cell ino-table-header-cell--searchable ino-table-header-cell--sortable hydrated"
                                     data-column-id="_qf4c0fmui"
                                     tabindex="-1"
                                     id="ino-table-header-cell-id__m2k26k36n"
                                     style="max-width: 230px;"
              >
                <ino-popover color-scheme="transparent"
                             class="hydrated"
                >
                  <div class="mdc-data-table__header-cell-wrapper"
                       slot="popover-trigger"
                       tabindex="0"
                       aria-expanded="false"
                  >
                    <ino-icon class="ino-table-header-cell__search-icon hydrated ino-icon--color-scheme-primary">
                    </ino-icon>
                    <div class="mdc-data-table__header-cell-label">
                      Column Selection Search
                    </div>
                  </div>
                  <div>
                  </div>
                </ino-popover>
                <ino-icon-button class="sort-none ino-icon-button--color-scheme-dark hydrated">
                  <button class="mdc-icon-button mdc-ripple-upgraded--unbounded mdc-ripple-upgraded"
                          type="button"
                          style="--mdc-ripple-fg-size:14px; --mdc-ripple-fg-scale:1.71429; --mdc-ripple-left:5px; --mdc-ripple-top:5px;"
                  >
                    <div class="mdc-icon-button__ripple">
                    </div>
                    <span class="mdc-icon-button__icon">
                      <ino-icon class="ino-icon--color-scheme-primary hydrated">
                      </ino-icon>
                    </span>
                  </button>
                </ino-icon-button>
              </ino-table-header-cell>
            </tbody>
          </table>
        </div>
        <div class="mdc-data-table__progress-indicator">
          <div class="mdc-data-table__scrim">
          </div>
        </div>
      </div>
    </ino-table>
  </div>
</div>
`;

exports[`Structure/ino-table-header-cell Searched smoke-test 1`] = `
<div id="root-inner">
  <div class="story-ino-table-header-cell">
    <ino-table class="hydrated">
      <div class="mdc-data-table ino-table--no-header">
        <div class="mdc-data-table__table-container">
          <table class="ino-table__table mdc-data-table__table">
            <tbody class="mdc-data-table__content">
              <ino-table-header-cell autofocus="false"
                                     not-sortable="false"
                                     sort-direction
                                     search-icon="search"
                                     searched="true"
                                     label="Label"
                                     role="columnheader"
                                     class="mdc-data-table__header-cell ino-table-header-cell--searchable ino-table-header-cell--sortable ino-table-header-cell--searched hydrated"
                                     data-column-id="_7zufs1zsk"
                                     tabindex="-1"
                                     id="ino-table-header-cell-id__9xz9y4hhr"
                                     style="max-width: 230px;"
              >
                <ino-popover color-scheme="transparent"
                             class="hydrated"
                >
                  <div class="mdc-data-table__header-cell-wrapper"
                       slot="popover-trigger"
                       tabindex="0"
                       aria-expanded="false"
                  >
                    <ino-icon class="ino-table-header-cell__search-icon ino-icon--color-scheme-primary hydrated">
                    </ino-icon>
                    <div class="mdc-data-table__header-cell-label">
                      Label
                    </div>
                  </div>
                  <div>
                  </div>
                </ino-popover>
                <ino-icon-button class="sort-none ino-icon-button--color-scheme-dark hydrated">
                  <button class="mdc-icon-button mdc-ripple-upgraded--unbounded mdc-ripple-upgraded"
                          type="button"
                          style="--mdc-ripple-fg-size:14px; --mdc-ripple-fg-scale:1.71429; --mdc-ripple-left:5px; --mdc-ripple-top:5px;"
                  >
                    <div class="mdc-icon-button__ripple">
                    </div>
                    <span class="mdc-icon-button__icon">
                      <ino-icon class="ino-icon--color-scheme-primary hydrated">
                      </ino-icon>
                    </span>
                  </button>
                </ino-icon-button>
              </ino-table-header-cell>
            </tbody>
          </table>
        </div>
        <div class="mdc-data-table__progress-indicator">
          <div class="mdc-data-table__scrim">
          </div>
        </div>
      </div>
    </ino-table>
  </div>
</div>
`;

exports[`Structure/ino-table-header-cell SortDirection smoke-test 1`] = `
<div id="root-inner">
  <div class="story-ino-table-header-cell">
    <ino-table class="hydrated">
      <div class="mdc-data-table ino-table--no-header">
        <div class="mdc-data-table__table-container">
          <table class="ino-table__table mdc-data-table__table">
            <tbody class="mdc-data-table__content">
              <ino-table-header-cell autofocus="false"
                                     not-sortable="false"
                                     sort-direction="desc"
                                     search-icon="search"
                                     searched="false"
                                     label="Label"
                                     role="columnheader"
                                     class="mdc-data-table__header-cell ino-table-header-cell--searchable ino-table-header-cell--sortable hydrated"
                                     data-column-id="_xn1wzz0cq"
                                     tabindex="-1"
                                     id="ino-table-header-cell-id__1cuomzcax"
                                     style="max-width: 230px;"
              >
                <ino-popover color-scheme="transparent"
                             class="hydrated"
                >
                  <div class="mdc-data-table__header-cell-wrapper"
                       slot="popover-trigger"
                       tabindex="0"
                       aria-expanded="false"
                  >
                    <ino-icon class="ino-table-header-cell__search-icon ino-icon--color-scheme-primary hydrated">
                    </ino-icon>
                    <div class="mdc-data-table__header-cell-label">
                      Label
                    </div>
                  </div>
                  <div>
                  </div>
                </ino-popover>
                <ino-icon-button class="sort-desc ino-icon-button--color-scheme-dark hydrated">
                  <button class="mdc-icon-button mdc-ripple-upgraded--unbounded mdc-ripple-upgraded"
                          type="button"
                          style="--mdc-ripple-fg-size:14px; --mdc-ripple-fg-scale:1.71429; --mdc-ripple-left:5px; --mdc-ripple-top:5px;"
                  >
                    <div class="mdc-icon-button__ripple">
                    </div>
                    <span class="mdc-icon-button__icon">
                      <ino-icon class="hydrated ino-icon--color-scheme-primary">
                      </ino-icon>
                    </span>
                  </button>
                </ino-icon-button>
              </ino-table-header-cell>
            </tbody>
          </table>
        </div>
        <div class="mdc-data-table__progress-indicator">
          <div class="mdc-data-table__scrim">
          </div>
        </div>
      </div>
    </ino-table>
  </div>
</div>
`;
